--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="https://open.spotify.com/show/54qS4VR14dJizxjvqaedkZ" class="image fit"><img src="images/pic03.jpg" alt=""></a>
-											<p> Podcas Logotype</p>
+											<p> Podcast Logotype</p>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
