--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 							<article id="contact" class="panel">
 								<h1>Contact</h1>
 								<br
-								You can reach me on my social medias or reach me on my <a href="mailto:dejonadam@myvuw.ac.nz" target="_blank">email</a>
+								<p>You can reach me on <a href="https://www.instagram.com/adamdejongdesign/" target="_blank">instagram</a> or reach me on my <a href="mailto:dejonadam@myvuw.ac.nz" target="_blank">email</a></p>
 							</article>
 
 					</div>
