--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="https://open.spotify.com/show/54qS4VR14dJizxjvqaedkZ" target="_blank" class="image fit"><img src="images/pic03.jpg" alt=""></a>
+											<a href="#" href="https://open.spotify.com/show/54qS4VR14dJizxjvqaedkZ" target="_blank" class="image fit"><img src="images/pic03.jpg" alt=""></a>
 											<p> Podcast Logotype</p>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
