--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<!-- Work -->
 							<article id="work" class="panel">
 								<header>
-									<h2>Features</h2>
+									<h2>Some of my work</h2>
 								</header>
 								<p>
 									Here's a little bit of what I've done
