--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
-						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
+						<a href="#work" class="icon solid fa-camera"><span>work</span></a>
 						<a href="https://www.instagram.com/adamdejongdesign/" class="icon brands fa-instagram" target="_blank"><span>Instagram</span></a>
 						<a href="https://www.flickr.com/people/193399566@N04/" class="icon brands fa-flickr" target="_blank"><span>Flickr</span></a>
+						<a href="https://open.spotify.com/show/54qS4VR14dJizxjvqaedkZ" class="icon brands fa-spotify" target="_blank"><span>Podcast</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -37,7 +37,7 @@
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me.bmp" alt="" />
+									<img src="images/me.jpg" alt="" />
 								</a>
 							</article>
 
@@ -59,7 +59,7 @@
 											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" href="https://open.spotify.com/show/54qS4VR14dJizxjvqaedkZ" target="_blank" class="image fit"><img src="images/pic03.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
 											<p> Podcast Logotype</p>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
@@ -75,15 +75,6 @@
 									</div>
 								</section>
 							</article>
-
-						
-							<article id="contact" class="panel">
-								<h1>Contact</h1>
-								<br
-								<p>You can reach me on <a href="https://www.instagram.com/adamdejongdesign/" target="_blank">instagram</a> or reach me on my <a href="mailto:dejonadam@myvuw.ac.nz" target="_blank">email</a></p>
-							</article>
-
-					</div>
 
 				<!-- Footer -->
 					<div id="footer">
