--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 									<p>Studying Design, Illustration and Photography</p>
 								</header>
 								<a href="#work" class="jumplink pic">
-									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me.jpg" alt="" />
+									<span class="arrow icon solid fa-chevron-right"></span>
+									<img src="images/me.bmp" alt=""/>
 								</a>
 							</article>
 
@@ -60,11 +60,11 @@
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
-											<p> Podcast Logotype</p>
+											<p>Podcast Logotype</p>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
-											<p> Photography</p>
+											<p>Photography</p>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
